Fix output message for mushroom classification results

--- a/07_asymmetric_classification.ipynb
+++ b/07_asymmetric_classification.ipynb
@@ -347,8 +347,7 @@
             "Targeting 100% Recall. Optimal Safety Threshold: 0.0394\n",
             "--- RESULTS ---\n",
             "Mushrooms sorted as Edible: 770\n",
-            "Mushrooms flagged as Poisonous (Discarded): 855\n",
-            "Check your folder for 'final_pro_submission.csv' and upload it! 🍄\n"
+            "Mushrooms flagged as Poisonous (Discarded): 855\n"
           ]
         }
       ]
