Mit Colab erstellt

--- a/07_asymmetric_classification.ipynb
+++ b/07_asymmetric_classification.ipynb
@@ -238,92 +238,107 @@
         "from sklearn.calibration import CalibratedClassifierCV\n",
         "\n",
         "# --- 1. DATA ACQUISITION ---\n",
+        "# Helper function to convert a Google Drive file ID into a direct download link.\n",
         "def get_url(drive_id):\n",
         "    return f\"https://drive.google.com/uc?export=download&id={drive_id}\"\n",
         "\n",
-        "# IDs from your provided links\n",
+        "# Unique IDs for the training set and the unlabeled \"foraged\" (test) set.\n",
         "train_id = \"1Op1vQftBKN1lrPVGGLJU-UOlv_dScTup\"\n",
         "foraged_id = \"1eWxV9FGj6D-YnMsv4mHMWRcGIKbjrXYL\"\n",
         "\n",
-        "# Load Data\n",
+        "# Load dataframes and set 'Id' as the index to prevent it from being treated as a feature.\n",
         "df_train = pd.read_csv(get_url(train_id)).set_index('Id')\n",
         "X_foraged_raw = pd.read_csv(get_url(foraged_id)).set_index('Id')\n",
         "\n",
+        "# Separate features (X) and target variable (y).\n",
         "X = df_train.drop(columns=['poisonous'])\n",
         "y = df_train['poisonous']\n",
-        "X_foraged = X_foraged_raw[X.columns] # Ensure identical column order\n",
+        "\n",
+        "# Critical step: Ensure the test set has exactly the same columns in the same order as the training set.\n",
+        "X_foraged = X_foraged_raw[X.columns]\n",
         "\n",
         "# --- 2. THE EXPERT PIPELINE ---\n",
-        "# We use 'constant' imputer to make \"missing\" its own category.\n",
-        "# This is a pro-move for this dataset.\n",
+        "# We wrap the preprocessing and the model into a single Pipeline object.\n",
+        "# This prevents \"data leakage\" and ensures that the test data is treated exactly like the training data.\n",
         "base_pipe = make_pipeline(\n",
+        "    # Instead of guessing the mean/mode, we treat 'missing' as a unique category.\n",
+        "    # Often, the fact that data is missing is a signal in itself (MNAR - Missing Not At Random).\n",
         "    SimpleImputer(strategy='constant', fill_value='unknown'),\n",
+        "\n",
+        "    # Convert categorical strings into binary columns (1s and 0s).\n",
+        "    # 'handle_unknown=ignore' ensures the model doesn't crash if the test set has a category it hasn't seen before.\n",
         "    OneHotEncoder(handle_unknown='ignore'),\n",
+        "\n",
+        "    # RandomForest is robust to outliers and non-linear relationships.\n",
         "    RandomForestClassifier(\n",
-        "        n_estimators=500,\n",
-        "        max_depth=15,\n",
-        "        min_samples_leaf=2,\n",
-        "        random_state=42,\n",
-        "        n_jobs=-1\n",
+        "        n_estimators=500,    # Use 500 trees for a stable, \"averaged\" result.\n",
+        "        max_depth=15,        # Limit depth to prevent the model from memorizing (overfitting) the training data.\n",
+        "        min_samples_leaf=2,  # Require at least 2 samples at a leaf to smooth out predictions.\n",
+        "        random_state=42,     # Fixed seed for reproducibility.\n",
+        "        n_jobs=-1            # Use all available CPU cores for speed.\n",
         "    )\n",
         ")\n",
         "\n",
         "# --- 3. PROBABILITY CALIBRATION ---\n",
-        "# This makes the probability scores much more reliable for threshold tuning.\n",
+        "# By default, a Random Forest's 'predict_proba' outputs are not true probabilities.\n",
+        "# CalibratedClassifierCV adjusts these outputs so that if the model says 70% poisonous,\n",
+        "# roughly 70% of those cases actually are poisonous. This is vital for fine-tuning thresholds.\n",
         "print(\"Calibrating model for peak reliability...\")\n",
         "calibrated_model = CalibratedClassifierCV(base_pipe, method='sigmoid', cv=5)\n",
         "calibrated_model.fit(X, y)\n",
         "\n",
         "# --- 4. THRESHOLD OPTIMIZATION (THE \"SURVIVAL\" LOGIC) ---\n",
-        "# Get probabilities using Cross-Validation\n",
+        "# We use cross-validation to get \"out-of-sample\" probabilities for our training data.\n",
+        "# This tells us how the model performs on data it hasn't seen yet.\n",
         "y_probs = cross_val_predict(calibrated_model, X, y, cv=5, method='predict_proba')[:, 1]\n",
         "\n",
-        "# We use the Precision-Recall curve to find the \"Safety Sweet Spot\"\n",
+        "# Generate a list of precisions and recalls for every possible probability threshold.\n",
         "precisions, recalls, thresholds = precision_recall_curve(y, y_probs)\n",
         "\n",
-        "# Find the MAXIMUM threshold that still gives us 100% Recall.\n",
-        "# This lets us eat the MOST edible mushrooms without any risk.\n",
+        "# LOGIC: In mushroom foraging, a False Negative (eating a poisonous mushroom) is fatal.\n",
+        "# We want Recall to be 1.0 (100% of poisonous mushrooms are caught).\n",
+        "# We search for the 'optimal_threshold' which is the highest probability cutoff that still catches ALL toxins.\n",
         "safe_mask = recalls[:-1] == 1.0\n",
         "if any(safe_mask):\n",
         "    optimal_threshold = thresholds[safe_mask].max()\n",
         "else:\n",
-        "    # If we can't get 100%, we take the safest possible value\n",
+        "    # Fallback: if 100% recall is impossible, we set the threshold to the lowest probability observed.\n",
         "    optimal_threshold = y_probs.min()\n",
         "\n",
         "print(f\"Targeting 100% Recall. Optimal Safety Threshold: {optimal_threshold:.4f}\")\n",
         "\n",
         "# --- 5. GENERATE FINAL COMPETITION SUBMISSION ---\n",
-        "# Get probabilities for the foraged mushrooms\n",
+        "# Predict the probability of being 'poisonous' for the new, unknown mushrooms.\n",
         "final_probs = calibrated_model.predict_proba(X_foraged)[:, 1]\n",
         "\n",
-        "# Apply the threshold\n",
-        "# 1 = Poisonous, 0 = Edible\n",
+        "# Instead of the default 0.5 threshold, we use our 'Optimal Safety Threshold'.\n",
+        "# If the probability is even slightly above our \"safe\" limit, we flag it as poisonous (1).\n",
         "final_predictions = (final_probs >= optimal_threshold).astype(int)\n",
         "\n",
-        "# Create submission file\n",
+        "# Package the results into the format required for competition submission.\n",
         "submission = pd.DataFrame({\n",
         "    'Id': X_foraged.index,\n",
         "    'poisonous': final_predictions\n",
         "})\n",
         "\n",
+        "# Save to CSV without the pandas index.\n",
         "submission.to_csv('final_pro_submission.csv', index=False)\n",
         "\n",
-        "# Summary for you:\n",
+        "# Summary for the user to verify the distribution of the results.\n",
         "edible_count = (final_predictions == 0).sum()\n",
         "poison_count = (final_predictions == 1).sum()\n",
         "print(f\"--- RESULTS ---\")\n",
         "print(f\"Mushrooms sorted as Edible: {edible_count}\")\n",
-        "print(f\"Mushrooms flagged as Poisonous (Discarded): {poison_count}\")\n",
-        "print(\"Check your folder for 'final_pro_submission.csv' and upload it! 🍄\")"
+        "print(f\"Mushrooms flagged as Poisonous (Discarded): {poison_count}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "MlCgBwBxqmVC",
-        "outputId": "a028ae30-67f9-44f7-edb2-e360010affa1"
+        "outputId": "097f76a3-0d57-41dd-a5fd-cedc9004d457"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +348,8 @@
             "Targeting 100% Recall. Optimal Safety Threshold: 0.0394\n",
             "--- RESULTS ---\n",
             "Mushrooms sorted as Edible: 770\n",
-            "Mushrooms flagged as Poisonous (Discarded): 855\n"
+            "Mushrooms flagged as Poisonous (Discarded): 855\n",
+            "Check your folder for 'final_pro_submission.csv' and upload it! 🍄\n"
           ]
         }
       ]
