Mit Colab erstellt

--- a/07_asymmetric_classification.ipynb
+++ b/07_asymmetric_classification.ipynb
@@ -336,9 +336,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MlCgBwBxqmVC",
-        "outputId": "097f76a3-0d57-41dd-a5fd-cedc9004d457"
+        "outputId": "f0d0fb14-697b-44c2-de9c-74c09993ce2a"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,8 +348,7 @@
             "Targeting 100% Recall. Optimal Safety Threshold: 0.0394\n",
             "--- RESULTS ---\n",
             "Mushrooms sorted as Edible: 770\n",
-            "Mushrooms flagged as Poisonous (Discarded): 855\n",
-            "Check your folder for 'final_pro_submission.csv' and upload it! 🍄\n"
+            "Mushrooms flagged as Poisonous (Discarded): 855\n"
           ]
         }
       ]
